courses/430_programming-languages/assignment-6/tests/error/hw5_error20.nex
print "should not get here:n";
1 / 0;
anon (b:int, a:int) : none { var a:int; }(1,1);
